force-app/main/default/objects/Contact/fields/AddressInErrorDate__c.field-meta.xml
<CustomField>
    <fullName>AddressInErrorDate__c</fullName>
    <description>Date address was known to be in error (not mailable).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address In Error Date</label>
    <type>Date</type>
</CustomField>