force-app/main/default/objects/Contact/fields/AddressQuality__c.field-meta.xml
<CustomField>
    <fullName>AddressQuality__c</fullName>
    <description>Address Quality Indicators provide a measure of address deliverability according to the USPS Delivery Sequence File (DSF). Using outcomes of DSF footnotes and other Experian proprietary logic, we assign an Address Quality Index (AQI) to communicate the qu E=Excellent,G=Good,M=Marginal,N=Phone only,S=Satisfactory,</description>
    <label>Address Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>