force-app/main/default/objects/Contact/fields/AddressSourceCode__c.field-meta.xml
<CustomField>
    <fullName>AddressSourceCode__c</fullName>
    <description>Code distinguishing the source system of address data. Sources of consumer address:  Sales-Navis, Concepts, Ford Credit, ESP, Experian, Internet, CAC/CRC, Marketing Supplier, etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Source Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>