force-app/main/default/objects/Contact/fields/AddressStandardizationDate__c.field-meta.xml
<CustomField>
    <fullName>AddressStandardizationDate__c</fullName>
    <description>Date address was last confirmed to be valid through software address standardization.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Standardization Date</label>
    <type>Date</type>
</CustomField>