force-app/main/default/objects/Contact/fields/AddressUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>AddressUpdateDate__c</fullName>
    <description>Date of last address update.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Update Date</label>
    <type>Date</type>
</CustomField>