force-app/main/default/objects/Contact/fields/BirthDateTolerance__c.field-meta.xml
<CustomField>
    <fullName>BirthDateTolerance__c</fullName>
    <label>Birth Date Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>