force-app/main/default/objects/Contact/fields/DeliveryDesignator__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDesignator__c</fullName>
    <description>Contains the delivery point verification codes which are used to determine if the address has been verified against an additional source.</description>
    <label>Delivery Designator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>