force-app/main/default/objects/Contact/fields/EthnicityKey__c.field-meta.xml
<CustomField>
    <fullName>EthnicityKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ethnicity Key</label>
    <length>6</length>
    <type>Text</type>
</CustomField>