force-app/main/default/objects/Contact/fields/FordPassOptOut__c.field-meta.xml
<CustomField>
    <fullName>FordPassOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Consumer has a FordPass Preference Opt-in available,set this value to &apos;Y&apos;.If the Consumer does not have a FordPass Preference opt-in,set this value to &apos;N&apos;</description>
    <label>Ford Pass Opt Out</label>
    <type>Checkbox</type>
</CustomField>