force-app/main/default/objects/Contact/fields/FordPerformanceNewsletter__c.field-meta.xml
<CustomField>
    <fullName>FordPerformanceNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ford Performance Newsletter</label>
    <type>Checkbox</type>
</CustomField>