force-app/main/default/objects/Contact/fields/IPWarmUpAudience__c.field-meta.xml
<CustomField>
    <fullName>IPWarmUpAudience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP Warm-Up Audience</label>
    <type>Checkbox</type>
</CustomField>