force-app/main/default/objects/Contact/fields/LastName2__c.field-meta.xml
<CustomField>
    <fullName>LastName2__c</fullName>
    <description>Last Name 2. Surname of INDIVIDUAL-type consumer. This field will be used primarily by Ford of Mexico.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>