force-app/main/default/objects/Contact/fields/LegalGeoKey__c.field-meta.xml
<CustomField>
    <fullName>LegalGeoKey__c</fullName>
    <description>Unique identifier for a given geographical location.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Geography Key</label>
    <length>15</length>
    <type>Text</type>
</CustomField>