force-app/main/default/objects/Contact/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
            <value>
                <fullName>SINGLE</fullName>
            </value>
            <value>
                <fullName>MARRIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>