force-app/main/default/objects/Contact/fields/NameInErrorDate__c.field-meta.xml
<CustomField>
    <fullName>NameInErrorDate__c</fullName>
    <description>Date the consumer name was known to be in error.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name In Error Date</label>
    <type>Date</type>
</CustomField>