force-app/main/default/objects/Contact/fields/NameSourceCode__c.field-meta.xml
<CustomField>
    <fullName>NameSourceCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name Source Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>