force-app/main/default/objects/Contact/fields/NameUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>NameUpdateDate__c</fullName>
    <description>Date that the Individual Name fields were last updated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name Update Date</label>
    <type>Date</type>
</CustomField>