force-app/main/default/objects/Contact/fields/OccupationCode__c.field-meta.xml
<CustomField>
    <fullName>OccupationCode__c</fullName>
    <description>A Code indicating the consumers occupation.</description>
    <label>Occupation Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>