force-app/main/default/objects/Contact/listViews/Dealer_Contacts.listView-meta.xml
<ListView>
    <fullName>Dealer_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Dealer</value>
    </filters>
    <label>Dealer Contacts</label>
</ListView>